# cookiedough-cli

./: .eslintrc.js  .gitignore  .npmignore  .prettierignore  cookiedough.json  crumbs.json  dizzy.json  flavors.json  index.cjs  index.js  languages.arr  license  local_setup.md  make.ps1  makefile  package-lock.json  package.json  readme.md  t.ts  tsconfig.json  typedoc.json  update.sh
.assets/: manpage.txt
.bdd/: config.feature  flavor.feature
.config/: .defaults.json  flavors.json  tsbase.json
.development/: chores.md  local_setup.md
.env/: .defaults.json
.flavormods/: deno.json  go.json  node.json
.flavors/_copy_/c++/: CMakeLists.txt  lib.in.h  main.cpp
.flavors/c/: doughmap.json  flavor.json
.flavors/go/: doughmap.json  flavor.json
.flavors/node/: doughmap.json  flavor.json
__fixtures__/test-runner/: cookie-config.json
__fixtures__/test0/: .swcrc  makefile  package.json  tsconfig.json
cmd/: index.ts
cmd/handler/: constants.ts  create.ts  doctor.ts  edit.ts  help.ts  index.ts  locate.ts  (+1 more)
cmd2/: entry
docs/: readme.md
include/: args.ts  config.ts  copy-dir.ts  flavor.ts  index.ts  logger.ts  presets.ts  sys-info.ts
my-project/: cookie-config.json
reference/: README.md  modules.md
scripts/: buildnew  refresh  relink-pkg  remove-old  search-and-destroy  setup  undo-oops  update  update-lerna
src/: constants.ts  index.ts  run.js  util.ts
static/: default-package.json
templates/: cmake.json  node.json  python.json  rust.json
test/: cookie-config.json
tools/: copy-dir.ts  index.ts  sys-info.ts
types/: constants.ts  index.ts
(+220 files in other folders)
